# task-manager

./: .gitignore  IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  SPEC.md  pyproject.toml
src/: __init__.py  cli.py  storage.py  task.py
tests/: test_cli.py  test_storage.py  test_task.py
